# graphiti_test

./: docker-compose.yaml
neo4j/: Dockerfile
neo4j/conf/: apoc.conf  neo4j.conf
python/: Dockerfile
src/: .gitignore  pyproject.toml
src/app/: main.py
